Prevent menu being removed on noarrow devices, the webui is not designed for mobile so the menu should remain in a collapsed state

--- a/html/css/allsky.css
+++ b/html/css/allsky.css
@@ -1671,17 +1671,8 @@ div.dt-container div.dt-scroll-body {
         padding-right: 5px;
     }
 
-    /* Totally hide sidebar on really narrow screens to give more room to "content". */
-    .sidebar.collapsed {
-        display: none;
-    }
-
     .sidebar.collapsed~.content {
-        left: 0px;
-    }
-
-    .sidebar-collapse-handle {
-        display: none;
+        left: 72px;
     }
 }
 
